# Shiro-san

./: .gitignore  PRIVACIDAD.md  README.md  TERMINOS.md  async_repair.py  cmd_embed.py  cmd_join.py  cmd_leave.py  cmd_say.py  cmd_sayto.py  database.db  database_dc_bot.db  dead_responses.json  dead_responses_other.json  dead_responses_other2.json  dead_saves.json  dime_responses.json  joinrole.json  main.py  perms.py  pregunta_responses.json  pregunta_responses_other.json  pyproject.toml  reactrole.json  responses.json  settings.json  welcomes.json
Cogs/: music.py
