[tool.poetry]
name = "repl_python3_Shiro"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
youtube-dl = "^2021.5.16"
async-timeout = "^3.0.1"
discord = "^1.0.1"
PyNaCl = "^1.4.0"
chatterbot-voice = "^0.1.5"
chatbot-py = "^2.74"
pymongo = "^3.12.0"
dnspython = "^2.1.0"
discord-components = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
